# solaire-predictor2

./: .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
model/: boosting_electricity_usage-0.1.3.pkl  boosting_electrification_rate-0.1.5.pkl  boosting_gdp_growth-0.1.4.pkl  boosting_gdp_total-0.1.5.pkl  boosting_population-0.1.5.pkl  boosting_population_growth-0.1.4.pkl  countries_mapping.csv  encoding_mapping.csv  linear_electricity_usage-0.1.2.pkl  linear_electrification_rate-0.1.3.pkl  linear_gdp_growth-0.1.4.pkl  linear_gdp_total-0.1.3.pkl  linear_population-0.1.3.pkl  linear_population-0.1.5.pkl  linear_population_growth-0.1.5.pkl  model.py  xgb_electricity_usage-0.1.2.pkl  xgb_electrification_rate-0.1.3.pkl  xgb_gdp_growth-0.1.4.pkl  xgb_gdp_total-0.1.3.pkl  xgb_population-0.1.3.pkl  xgb_population-0.1.4.pkl  xgb_population_growth-0.1.5.pkl
public/: index.html
