[project]
name = "solaire-predictor"
version = "0.1.5"
description = "Solar energy and economic prediction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "scikit-learn==1.2.2",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
]
